src/snapshots/csvs_convert__tests__add_different_resource_json.snap
---
source: src/lib.rs
assertion_line: 186
expression: "merge_datapackage_json(vec![format! (\"fixtures/{datapackage1}.json\"), format!\n                            (\"fixtures/{datapackage2}.json\")]).unwrap()"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: number
          count: 2
        - name: title
          type: string
          count: 2
      primaryKey: _link
    path: csv/games.csv
  - profile: tabular-data-resource
    name: games2
    schema:
      fields:
        - name: id
          type: number
          count: 2
        - name: title
          type: string
          count: 2
      primaryKey: _link
    path: csv/games2.csv

