src/snapshots/csvs_convert__tests__conflict_types_zip.snap
---
source: src/lib.rs
assertion_line: 196
expression: "merge_datapackage_json(vec![format! (\"fixtures/{datapackage1}.zip\"), format!\n                            (\"fixtures/{datapackage2}.zip\")]).unwrap()"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: string
          count: 4
        - name: title
          type: string
          count: 4
      primaryKey: _link
    path: csv/games.csv

